<resources>
    <string name="app_name">Just Relax!</string>
    <string name="title_breathe">Breathe</string>
    <string name="title_melodies">Melodies</string>
    <string name="title_saved_mixes">Saved Mixes</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_data">Delete Data</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
</resources>