<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_melodies">

    <fragment
        android:id="@+id/navigation_breathe"
        android:name="com.example.relaxmelodies.ui.breathe.BreatheFragment"
        android:label="@string/title_breathe"
        tools:layout="@layout/fragment_breathe" />

    <fragment
        android:id="@+id/navigation_melodies"
        android:name="com.example.relaxmelodies.ui.melodies.MelodiesFragment"
        android:label="@string/title_melodies"
        tools:layout="@layout/fragment_melodies" />

    <fragment
        android:id="@+id/navigation_saved_mixes"
        android:name="com.example.relaxmelodies.ui.savedMixes.SavedMixesFragment"
        android:label="@string/title_saved_mixes"
        tools:layout="@layout/fragment_saved_mixes" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.relaxmelodies.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/fragment_settings" />
</navigation>